brat/test/golden/error/pass_empty.brat.golden
Error in test/golden/error/pass_empty.brat on line 2:
f = { (x => x), .. }
                ^^

  Type error: pass is being given an empty row

